backend/crates/qbit/tests/snapshots/ai_events_characterization__sub_agent_completed_serialization.snap
---
source: crates/qbit/tests/ai_events_characterization.rs
assertion_line: 281
expression: json
---
{
  "type": "sub_agent_completed",
  "agent_id": "agent-001",
  "response": "Analysis complete",
  "duration_ms": 5000,
  "parent_request_id": "parent-req-001"
}
