backend/crates/qbit/tests/snapshots/ai_events_characterization__sub_agent_error_serialization.snap
---
source: crates/qbit/tests/ai_events_characterization.rs
expression: json
---
{
  "type": "sub_agent_error",
  "agent_id": "agent-001",
  "error": "Failed to parse response"
}
