backend/crates/qbit/tests/snapshots/ai_events_characterization__text_delta_event_serialization.snap
---
source: crates/qbit/tests/ai_events_characterization.rs
expression: json
---
{
  "type": "text_delta",
  "delta": "Hello",
  "accumulated": "Hello world"
}
