backend/crates/qbit/tests/snapshots/ai_events_characterization__tool_approval_request_without_stats_serialization.snap
---
source: crates/qbit/tests/ai_events_characterization.rs
assertion_line: 122
expression: json
---
{
  "args": {
    "command": "ls -la"
  },
  "can_learn": false,
  "request_id": "req-approval-2",
  "risk_level": "high",
  "source": {
    "type": "main"
  },
  "stats": null,
  "suggestion": null,
  "tool_name": "shell_exec",
  "type": "tool_approval_request"
}
