backend/crates/qbit/tests/snapshots/ai_events_characterization__tool_auto_approved_serialization.snap
---
source: crates/qbit/tests/ai_events_characterization.rs
expression: json
---
{
  "type": "tool_auto_approved",
  "request_id": "req-auto-1",
  "tool_name": "read_file",
  "args": {
    "path": "/readme.md"
  },
  "reason": "Always allowed by user",
  "source": {
    "type": "main"
  }
}
