backend/crates/qbit/tests/snapshots/ai_events_characterization__tool_request_main_source_serialization.snap
---
source: crates/qbit/tests/ai_events_characterization.rs
assertion_line: 46
expression: json
---
{
  "args": {
    "path": "/src/main.rs"
  },
  "request_id": "req-456",
  "source": {
    "type": "main"
  },
  "tool_name": "read_file",
  "type": "tool_request"
}
