backend/crates/qbit/tests/snapshots/ai_events_characterization__tool_request_sub_agent_source_serialization.snap
---
source: crates/qbit/tests/ai_events_characterization.rs
expression: json
---
{
  "type": "tool_request",
  "tool_name": "read_file",
  "args": {
    "path": "/src/lib.rs"
  },
  "request_id": "req-789",
  "source": {
    "type": "sub_agent",
    "agent_id": "agent-001",
    "agent_name": "code_analyzer"
  }
}
